--- a/paper/SoundTexturesBib.bib
+++ b/paper/SoundTexturesBib.bib
@@ -22,3 +22,9 @@ author = "Josh H. McDermott and Eero P. Simoncelli"
   year={2013},
   publisher={Nature Publishing Group}
 }
+
+@inproceedings{mcfee2015librosa,
+  title={librosa: Audio and Music Signal Analysis in Python},
+  author={McFee, Brian and Raffel, Colin and Liang, Dawen and Ellis, Daniel PW and McVicar, Matt and Battenberg, Eric and Nieto, Oriol},
+  year={2015}
+}
