some intro written

--- a/paper/SoundTexturesBib.bib
+++ b/paper/SoundTexturesBib.bib
@@ -28,3 +28,10 @@ author = "Josh H. McDermott and Eero P. Simoncelli"
   author={McFee, Brian and Raffel, Colin and Liang, Dawen and Ellis, Daniel PW and McVicar, Matt and Battenberg, Eric and Nieto, Oriol},
   year={2015}
 }
+
+@phdthesis{saint1995classification,
+  title={Classification of sound textures},
+  author={Saint-Arnaud, Nicolas},
+  year={1995},
+  school={Massachusetts Institute of Technology}
+}
