--- a/paper/SoundTexturesPaper.tex
+++ b/paper/SoundTexturesPaper.tex
@@ -206,6 +206,8 @@ We provide working definitions for examples of three main descriptors: sparsity,
 
 Compressibility was the simplest to work out. We chose a standard lossy and lossless compression algorithm and measured the compression ratio for the .wav flies. In this case we used \xxx{what audio compression did we use?}
 
+How to define sparsity was slighly less clear, since it usually refers to the quantity of zero entries with respect to some basis.
+
 
 \xxx{Give formal and informal definitions of the features we used}
 
