added library refrences and future works

--- a/paper/SoundTexturesBib.bib
+++ b/paper/SoundTexturesBib.bib
@@ -35,3 +35,86 @@ author = "Josh H. McDermott and Eero P. Simoncelli"
   year={1995},
   school={Massachusetts Institute of Technology}
 }
+
+@inproceedings{schwarz2011state,
+  title={State of the art in sound texture synthesis},
+  author={Schwarz, Diemo},
+  booktitle={Proc. Digital Audio Effects (DAFx)},
+  pages={221--231},
+  year={2011}
+}
+
+@inproceedings{kersten2010sound,
+  title={Sound texture synthesis with hidden markov tree models in the wavelet domain},
+  author={Kersten, Stefan and Purwins, Hendrik},
+  booktitle={Sound and Music Computing Conference},
+  year={2010}
+}
+
+@inproceedings{saint1995analysis,
+  title={Analysis and synthesis of sound textures},
+  author={Saint-Arnaud, Nicolas and Popat, Kris},
+  booktitle={in Readings in Computational Auditory Scene Analysis},
+  year={1995},
+  organization={Citeseer}
+}
+
+@article{negahban2011estimation,
+  title={Estimation of (near) low-rank matrices with noise and high-dimensional scaling},
+  author={Negahban, Sahand and Wainwright, Martin J},
+  journal={The Annals of Statistics},
+  pages={1069--1097},
+  year={2011},
+  publisher={JSTOR}
+}
+
+@inproceedings{mcfee2015librosa,
+  title={librosa: Audio and Music Signal Analysis in Python},
+  author={McFee, Brian and Raffel, Colin and Liang, Dawen and Ellis, Daniel PW and McVicar, Matt and Battenberg, Eric and Nieto, Oriol},
+  booktitle={Proceedings of the 14th Python in Science Conference},
+  year={2015}
+}
+
+@article{portilla2000parametric,
+  title={A parametric texture model based on joint statistics of complex wavelet coefficients},
+  author={Portilla, Javier and Simoncelli, Eero P},
+  journal={International Journal of Computer Vision},
+  volume={40},
+  number={1},
+  pages={49--70},
+  year={2000},
+  publisher={Springer}
+}
+
+@article{scikit-learn,
+ title={Scikit-learn: Machine Learning in {P}ython},
+ author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+         and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+         and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+         Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+ journal={Journal of Machine Learning Research},
+ volume={12},
+ pages={2825--2830},
+ year={2011}
+}
+
+@Misc{scipy,
+  author =    {Eric Jones and Travis Oliphant and Pearu Peterson and others},
+  title =     {{SciPy}: Open source scientific tools for {Python}},
+  year =      {2001--},
+  url = "http://www.scipy.org/",
+  note = {[Online; accessed <today>]}
+}
+
+@ARTICLE{numpy,
+author={van der Walt, S. and Colbert, S.C. and Varoquaux, G.},
+journal={Computing in Science Engineering},
+title={The NumPy Array: A Structure for Efficient Numerical Computation},
+year={2011},
+volume={13},
+number={2},
+pages={22-30},
+keywords={data structures;high level languages;mathematics computing;numerical analysis;Python programming language;high level language;numerical computation;numerical data;numpy array;Arrays;Computational efficiency;Finite element methods;Numerical analysis;Performance evaluation;Resource management;Vector quantization;NumPy;Python;numerical computations;programming libraries;scientific programming},
+doi={10.1109/MCSE.2011.37},
+ISSN={1521-9615},
+month={March},}
