--- a/paper/SoundTexturesPaper.tex
+++ b/paper/SoundTexturesPaper.tex
@@ -193,7 +193,7 @@ Sound textures, such as rain or crackling fire, are the result of many similar a
 
 Recent work by McDermott and Simoncelli attempts to understand a special category of sounds called \emph{sound textures}\cite{McDermott2011926, mcdermott2013summary}. They show that for many sound textures, the salient features that cause humans to classify these sounds are controlled by a number of time-averaged statistics of the sounds. This leads to an interesting question of why some sounds seem to be identified by time-averaged properties, when many other, such as speech or music, depend strongly on their temporal structure. McDermott et. al. conjecture that the `sparsity' or `compressibility' are related to the sounds that are perceived in this way. In addition, they mention that sound textures are `temporally homogeneous' without giving formal definitions of these terms. This paper seeks to build upon these ideas both to investigate new features for audio classification as well as to lend evidence toward the previous conjectures about sound texture perception. We provide several formal definitions of audio compressibility, sparsity, and temporal homogeneity in Section~\ref{sec:definitions}. These are then extracted as a feature set and are used in a machine learning algorithm for sound textures, described in Section~\ref{sec:methods}.
 
-There has been other prior work on classifying sound textures. Saint-Arnaud's Master's Thesis attempts to extract the sound atoms that make up sound textures and use this as a basis for a classifier\cite{saint1995classification}. The thesis also discusses human perception of sound textures and the difficulties surrounding a good definition. A significant ammount of the machine learning work in sound textures has been around synthesis often using wavelet hierarchies\cite{kersten2010sound} or sound atoms\cite{saint1995analysis}. Schwarz provies a general overview of methods as well as a classification scheme of the synthesis methdos used\cite{schwarz2011state}.
+There has been other prior work on classifying sound textures. Saint-Arnaud's Master's Thesis attempts to extract the sound atoms that make up sound textures and use this as a basis for a classifier\cite{saint1995classification}. The thesis also discusses human perception of sound textures and the difficulties surrounding a good definition. A significant amount of the machine learning work in sound textures has been around synthesis often using wavelet hierarchies\cite{kersten2010sound} or sound atoms\cite{saint1995analysis}. Schwarz provides a general overview of methods as well as a classification scheme of the synthesis methdos used\cite{schwarz2011state}.
 
 
 \xxx{Cite McDermott's papers\cite{McDermott2011926, mcdermott2013summary} and why we care about these features/classification}
@@ -208,21 +208,32 @@ Compressibility was the simplest to work out. We chose a standard lossy and loss
 
 How to define sparsity was slightly less clear, since it usually refers to the quantity of zero entries with respect to some basis. To overcome this, we decided to use several natural representations. We looked at sparsity in the time domain with respect to the actual time series of the audio sample. We also looked at the sparsity in the frequency domain under both uniform and log-scale transforms. To be more precise, we took short-term Fourier transforms, constant q transforms, and Mel transforms of the time series (using the implementations in the Python library Librosa\cite{mcfee2015librosa}) and counted the ratio of entries near zero. Due to noise and precision error, we assumed an entry was empty if the magnitude of the value was less than $10^{-5}$. There are also algorithms for extracting low rank matrices assuming one has sampled from noisy data\cite{negahban2011estimation}. We would have liked to have implemented and run one of these algorithms, using the derived rank as a measure of sparsity, but we did not have time to extract this feature.
 
-Finally temporal homogeneity refers to consistency in the signal over time. Obviously we can't have everything be exactly the same, so one must pick spesific features with which to check consistency. A paper on visual textures provides a precise definition: $X$ is homogeneous with respect to the function $\Phi: \mathbb{R}^L \rightarrow \mathbb{R}$
+Finally temporal homogeneity refers to consistency in the signal over time. Obviously we can't have everything be exactly the same, so one must pick specific features with which to check consistency. A paper on visual textures provides a precise definition: $X$ is homogeneous with respect to the function $\Phi: \mathbb{R}^L \rightarrow \mathbb{R}$ with tolerance $\epsilon$ and probability $p$ if the average of $\Phi$ over a sample $x \in X$ is a good approximation to the average of $\Phi$ over all of $X$ \cite{portilla2000parametric}.
+$$P_x(\mathrm{E}(\Phi(x)) - \mathrm{E}(\Phi(X)) < \epsilon) \geq p$$
+In practice, this definition is slightly cumbersome to use, and requires picking either our probability or threshold arbitrarily. In the same spirit, we instead decide to use the variance of a given statistic over a sample. Thus we calculate the inhomogeneity of $X$ with respect to $\Phi$ as $$\Sigma_{x\in X} (\Phi(x) - \mathrm{E}(\Phi(X))^2$$
+We additionally note that the original definition of homogeneity was given with respect to translations over a two dimensional space, whereas we take samples over a single time dimension.
+
+In this paper we decided to use the first through fourth moments of the time series and various sub-bands of the audio signal. In particular we compute the short-term Fourier transforms, constant q transforms, and Mel transforms of the time series. We further computed the amplitude envelopes of these waveforms and took the corresponding short-term Fourier transforms, constant q transforms, or Mel transforms of the resulting amplitude envelope following the auditory model in \cite{McDermott2011926, mcdermott2013summary}. We would have also liked to look at the temporal homogeneity of the cross-correlation of the bands, capturing all of the statistics used in that paper.
 
 \xxx{Give formal and informal definitions of the features we used}
 
 \section{Methods}
 \label{sec:methods}
+
+
+All of our models were written in Python with the help of a number of external libraries. NumPy\cite{numpy} and Librosa\cite{mcfee2015librosa} were used for audio processing; SciPy\cite{scipy} provided a number of useful statistical methods; and scikit-learn\cite{scikit-learn} was used for our regression and classification.
+
 \xxx{Describe how we set up our feature extraction. How we set up our learning. What our dataset is. Any other important process things.}
 
 \section{Results}
 \label{sec:results}
-\xxx{What coorilated and what didn't? What feature (ensemble) lead to a good classifier?}
+\xxx{What correlated and what didn't? What feature (ensemble) lead to a good classifier?}
 
 \section{Conclusion}
 
 \xxx{Speculate if these could be useful features in audio classification. Speculate about the implication to human audition. Give future directions.}
+
+There are a number of future directions left open by this paper. First, the space of reasonable features has not been fully explored and may lead to yet better classification methods or more insight into the nature of sound textures. These features include: other standard compression algorithms, the entropy of the audio signals, the Kolmogorov complexity of the audio signal, rank estimation of the audio signal, temporal homogeneity of the cross-band correlations, and different sparsity estimation criteria. Another obvious next direction is the integration of these features with existing audio classification methods to attempt to improve performance in more complex settings. Third, there is still much to be understood about the nature of these features and what they can tell us about the audio files. The authors would have been interested to look at the correlation between features, as many of them should be highly related. Understanding when things like sparsity and compressibility differer might hold new insight into signal characteristics. Further, the audio dataset was limited and constrained in a number of ways, and it would be interesting to see how these features vary with over a wider set of sounds. Finally, there still remain important questions about the nature of human perception of sound textures. We showed that intuition about what makes up a sound texture is partially captured by some formal measures, but given none appeared to be necessary or sufficient, it seems that this issue may be more complex than originally stated. However, we also did not fully explore what might reasonably be meant by sparse and temporally homogeneous audio signals, so it is still possible that another definition will better capture what causes this qualitatively different auditory category.
 
 \section*{Acknowledgments}
 
