--- a/paper/SoundTexturesBib.bib
+++ b/paper/SoundTexturesBib.bib
@@ -98,12 +98,33 @@ author = "Josh H. McDermott and Eero P. Simoncelli"
  year={2011}
 }
 
+@article{julesz1962visual,
+  title={Visual pattern discrimination},
+  author={Julesz, Bela},
+  journal={Information Theory, IRE Transactions on},
+  volume={8},
+  number={2},
+  pages={84--92},
+  year={1962},
+  publisher={IEEE}
+}
+
+@article{julesz1981textons,
+  title={Textons, the elements of texture perception, and their interactions},
+  author={Julesz, Bela},
+  journal={Nature},
+  volume={290},
+  number={5802},
+  pages={91--97},
+  year={1981}
+}
+
 @Misc{scipy,
   author =    {Eric Jones and Travis Oliphant and Pearu Peterson and others},
   title =     {{SciPy}: Open source scientific tools for {Python}},
   year =      {2001--},
   url = "http://www.scipy.org/",
-  note = {[Online; accessed <today>]}
+  note = {[Online; accessed December 10, 2015]}
 }
 
 @ARTICLE{numpy,
@@ -118,3 +139,11 @@ keywords={data structures;high level languages;mathematics computing;numerical a
 doi={10.1109/MCSE.2011.37},
 ISSN={1521-9615},
 month={March},}
+
+@book{tomita2013computer,
+  title={Computer analysis of visual textures},
+  author={Tomita, Fumiaki and Tsuji, Saburo},
+  volume={102},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
