--- a/paper/SoundTexturesPaper.tex
+++ b/paper/SoundTexturesPaper.tex
@@ -217,7 +217,7 @@ There are a number of future directions left open by this paper. First, the spac
 
 \section*{Acknowledgments}
 
-We thank Prof Josh McDermott for his support in answering our questions about their research and providing us with their dataset. We also thank the course staff of 6.867 for their instruction and support this semester. In particular, we appreciate Marzyeh Ghassemi advice and guidance in shaping our project plan.
+We thank Professor Josh McDermott for his support in answering our questions about his and Simoncelli's research and for providing us with their dataset. We also thank the course staff of 6.867 for their instruction and support this semester. In particular, we appreciate Marzyeh Ghassemi's advice and guidance in shaping our project plan.
 
 % bibliography
 \bibliographystyle{abbrv}
